[FIX] Pages: Scroll horizontal desnecessário
- (FIX) Em Chrome, um scroll horizontal aparece, mesmo com espaço o bastante
. Aparentemente, em Chrome, o scrollbar vertical toma espaço (realViewWidth = viewWidth + scrollbarWidth)

--- a/src/app/pages/guest_domain/signin/signin.component.scss
+++ b/src/app/pages/guest_domain/signin/signin.component.scss
@@ -6,7 +6,7 @@
     justify-content: center; // Center horizontally
     align-items: start; // Center vertically
 
-    min-width: 100vw;
+    min-width: calc(100vw - (100vw - 100%)); // Chrome has scroll, which takes space
     min-height: 100vh;
     height: fit-content;
     width: fit-content;
