--- a/src/app/pages/student_domain/dashboard/dashboard.component.scss
+++ b/src/app/pages/student_domain/dashboard/dashboard.component.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: row;
 
-    min-width: 100vw;
+    min-width: calc(100vw - (100vw - 100%)); // Chrome has scroll, which takes space
     min-height: 100vh;
     height: fit-content;
     width: fit-content;
